test/simple/ill-typed/wrap_subtype1.caprice
(* TEST
  include refutable;
*)

let t a = (type r) -> (a -> r) -> r

let return (type a) (x : a) : t a = fun r k -> k x

(* ERROR: int is not a subtype of { i : int | i == 0 } *)
let f : t { i : int | i == 0 } =
  return int 0

(* let t a = (type r) -> (a -> r) -> r

let return (type a) (x : a) : t a = fun r k -> k x

let g : (type r) -> (int -> r) -> r = fun r k -> k 0

let f : t { i : int | i == 0 } = g *)